# AI_Teacher_Prep_System

./: 1.txt  AiTeachSystemApplication.java  CodeGenerator.java  README.md  ai_demo.sql  ai_teach_system.sql  application.properties  components.d.ts  config.ini  index.html  package-lock.json  package.json  pom.xml  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts  zhiling.txt
AI_zglosh/: 3.txt
Front_end/: index.html
PptTurnVideo/: creat_vido.py  main.py  ppt_img.py  ppt_txt.py  xfPPT.py  xfppt_2.py
ai_teacher.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
config/: MybatisPlusConfig.java
controller/: BaseController.java  SysMenuController.java  SysRoleController.java  SysRoleMenuController.java  SysUserController.java  SysUserRoleController.java  TestController.java
education-sql/: Create.py  ReadMe.md  main.py  read.py  stu_answer.py  updatedelete.py  write_data.py
entity/: BaseEntity.java  SysMenu.java  SysRole.java  SysRoleMenu.java  SysUser.java  SysUserRole.java
front-end/: readme.md
mapper/: SysMenuMapper.java  SysRoleMapper.java  SysRoleMenuMapper.java  SysUserMapper.java  SysUserRoleMapper.java
resources/: ai_demo.sql  application.properties
service/: SysMenuService.java  SysRoleMenuService.java  SysRoleService.java  SysUserRoleService.java  SysUserService.java
src/: .env  App.vue  Image_crawling.py  Online_Test.py  Refine_txt.py  config.py  exercise_generation.py  langserve_app.py  llm_integration.py  main.py  main.ts  models.py  multimedia_generation.py  pdf_generator.py  ppt_turn_video.py  resource_recommender.py  (+2 more)
(+97 files in other folders)
