[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_teacher"
version = "0.1"
description = "AI Teacher Assistant System"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "zglosh", email = "z_13592323216@qq.com"},
]
license = {text = "MIT"}

[tool.setuptools]
packages = ["src", "configs", "education_sql", "models", "utils"]

[tool.setuptools.package-dir]
"" = "."
"configs" = "src/configs"
"education_sql" = "src/education_sql"
"models" = "src/models"
"utils" = "src/utils" 